# dc-tools

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: Dockerfile.debug  devcontainer.json  docker-compose.yml  environment.yml
.github/workflows/: ci-fast.yml  ci-nightly.yml
data/: __init__.py
data/glonet/: 2024-01-03.7z
data/glorys/: 2024-01-03.7z
dc/: __init__.py  evaluate.py  submit.py
dc/config/: dc2.yaml  dc2_edito.yaml  leaderboard_config.yaml  submission_template.yaml
dc/evaluation/: __init__.py  dc2.py  evaluation.py
dc/leaderboard_results/: leaderboard_config.yaml
dc2/config/: dc2.yaml  dc2_edito.yaml
dc2/evaluation/: evaluation.py
dctools/: __init__.py
dctools/data/: __init__.py  coordinates.py  dataloader.py  dataset.py  transforms.py
dctools/data/connection/: __init__.py  argo_data.py  config.py  connection_manager.py  create_config.py
dctools/data/datasets/: __init__.py  batch_preprocessing.py  concatenation.py  dataloader.py  dataset.py  dataset_manager.py  dc_catalog.py  forecast.py  loader.py  nan_filtering.py  observation_viewer.py  preprocessing.py
dctools/dcio/: __init__.py  dclogger.py  loader.py  saver.py
dctools/debug/: __init__.py  debug_utils.py
dctools/metrics/: __init__.py  compute_task.py  evaluator.py  metrics.py  oceanbench_metrics.py  worker_cleanup.py  worker_compute.py
dctools/processing/: argo_data.py  base.py  cmems_data.py  gridded_data.py  gridder.py  interpolation.py  nadir_data.py  runner.py  transforms.py
dctools/submission/: __init__.py  report.py  submission.py  validator.py
dctools/utilities/: adaptive_resources.py  args_config.py  coordinates.py  errors.py  file_utils.py  format_converter.py  init_dask.py  machine_profile.py  misc_utils.py  net_utils.py  parallelism.py  xarray_utils.py
dctools/utils/: file_utils.py  xarray_utils.py
docs/: doc_env.yml
docs/source/: api.md  api.rst  conf.py  index.md  index.rst  requirements.txt
docs/source/_static/: iframe.css
docs/source/data_challenges/: DC1.md  DC2.md  DC3.md  DC4.md  DC5.md  dc_index.md
docs/source/package_docs/: api.md  dctools_index.md  installation.md
docs/source/usage/: architecture.md  config.md  index.md  installation.md  quickstart.md
edito/: README.md  debug.md  environment.yml  prompt-3.13.md  prompt.md
edito/analyse/: Dockerfile
edito/base/: Dockerfile
edito/claude/: Dockerfile
edito/dctools/: Dockerfile
edito/gemini/: Dockerfile
edito/gpt/: Dockerfile
edito/mamba/: Dockerfile
edito/poetry/: Dockerfile
edito/py3.13/: Dockerfile
edito/py3.13-claude/: Dockerfile
edito/py3.13-claude-light/: Dockerfile
scripts/: build_argo_index.py  convert_netcdf_to_zarr.py  convert_to_zarr_config.yaml  download_glonet.py  interpolate_config.yaml  interpolate_to_grid.py  remove_variables_from_catalog.py  test_workspace.py
secrets/: oceanbench-deploy  oceanbench-deploy.pub
tests/: conftest.py  test_adaptive_resources.py  test_argo_catalog_path_scheme.py  test_argo_data.py  test_argo_interface.py  test_argo_shared_batch_pipeline.py  test_args_config.py  test_catalog.py  test_connection_manager.py  test_connection_manager_coverage.py  test_connection_manager_deep.py  test_create_config.py  test_dask_batch_cleanup.py  test_dask_pipeline_datasets.py  test_dataloader_argo_coherence.py  test_dataloader_deep.py  test_dataloader_helpers.py  test_dataset_global_metadata.py  test_dataset_manager_get_transform.py  test_dc_catalog_geometry.py  test_evaluator_coverage.py  test_evaluator_deep.py  test_file_utils.py  test_format_converter.py  test_gridded_data.py  test_interpolation_and_dask.py  test_memory_cleanup.py  test_mercator_oceanbench.py  test_mini_evaluation.py  test_nadir_data.py  test_observation_pipeline_regressions.py  test_pipeline.py  test_processing_base_dask_helpers.py  test_processing_runner.py  test_submission.py  test_time_dedup_interp.py  test_unittests.py
tests/config/: test_config.yaml
