[project]
name = "dctools"
description = "Basic tools common to all data challenges."
readme = "README.md"
authors = [
    {name="Kamel Ait Mohand"},
    {name="Guillermo Cossio"},
    ]
license = "GPL-3-only"
keywords = ["xarray", "sea-surface-height", "ocean", "benchmark"]
dynamic = [
    "version",
    "classifiers",
    ]

requires-python = ">=3.11.0,<3.14.0"
dependencies = [
    "argopy>=1.1.0",
    "cartopy>=0.24.1",
    "copernicusmarine>=2.2.2",
    "cupy-cuda11x>=13.0.0",
    "dask>=2025.7.0",
    "dask[distributed]>=2025.01.0",
    "ftputil (>=5.1.0,<6.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "h5py>=3.13.0",
    "json-handler>=2.0.1",
    "loguru>=0.7.3",
    "memory-profiler>=0.61.0",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "nbformat>=5.10.4",
    "numpy (>=1.25,<2.0.0)",
    "pangeo-forge-recipes (>=0.10.8)",
    "python-json-logger>=3.3.0",
    "pyarrow",
    "pyinterp>=2025.3.0",
    "rich>=13.9.4",
    "s3fs>=2024.10.0",
    "shapely>=1.8.4",
    "tabulate",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchgeo>=0.6.2",
    "xarray>=2024",
    "xbatcher>=0.4.0",
    "xskillscore>=0.0.27",
    "zarr (>=2.14.2,<3.0.0)",
    "scipy (>=1.13.1,<2.0.0)",
    "dill (>=0.4.0,<0.5.0)",
]

[project.urls]
Repository = "https://github.com/ppr-ocean-ia/dc-tools/tree/main"

[tool.poetry]
version = "0.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.33.0"
pytest = "^7.3.1"
pytest-cov = "^6.0.0"
ruff = "^0.9.10"
mypy = "*"
wget = "^3.2"
patool = "^3.1.3"

[tool.poetry.group.custom]
optional = false

[tool.poetry.group.custom.dependencies]
# oceanbench = { git = "https://github.com/aitmohandk/oceanbench.git", branch = "main" }
oceanbench = { path = "/home/k24aitmo/IMT/software/oceanbench", develop = true }
xrpatcher = { git = "https://github.com/jejjohnson/xrpatcher.git", tag = "v0.0.6", python = ">=3.12,<3.14.0" }
xesmf = { git = "https://github.com/pangeo-data/xESMF.git", tag = "v0.9.2" }
dcleaderboard = { git = "https://github.com/ocean-ai-data-challenges/dc_leaderboard", branch = "main" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.1"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
pygments = "^2.19.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core", "setuptools", "wheel", "cmake"]

[tool.ruff]
line-length = 100
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: fast, deterministic unit tests (default PR profile)",
    "integration: integration tests (local io/dask/external libs), included in coverage profile",
    "slow: truly slow tests (network, large downloads, multi-minute runs) — excluded from CI",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "docs",
    "test_cache",
]

[tool.ruff.lint]
# E - pycodestyle subsets:
		# E4 - whitespace
		# E7 - multiple-statements
		# E9 - trailing-whitespace
# F - Enable Pyflakes
# B - Enable flake8-bugbear
# W - Enable pycodestyle
# C901 - complex-structure
# D - Enable flake8-docstrings
# E501 - line-too-long
select = ["D", "W", "F", "E", "B"]
ignore = ["D401", "D406", "D407"]

[tool.ruff.lint.per-file-ignores]
"scripts/fix_oceanbench_quality.py" = ["E501"]
"scripts/fix_oceanbench_docstrings.py" = ["E501"]
"test_argo_imports.py" = ["F401"]
"test_argo_loading.py" = ["E402"]
"test_h5py_patch.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # Accepts: "google", "numpy", or "pep257".

[tool.coverage.run]
omit = ["dctools/debug/*"]

[tool.mypy]
python_version = "3.13"
disable_error_code = ["import-untyped"]
check_untyped_defs = true
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.poe.tasks]
types = "mypy --install-types --non-interactive dctools"
lint = "ruff check 'dctools' 'tests'"
test-fast = "pytest --capture=no -m 'not slow and not integration' tests/"
test-coverage = "pytest --capture=no -m 'not slow' --cov=dctools --cov=dc2 --cov-report=term-missing --cov-fail-under=50 tests/"
test-fast-strict = "pytest --capture=no -m 'not slow' --cov=dctools --cov=dc2 --cov-report=term-missing --cov-fail-under=80 tests/"
test-slow = "pytest --capture=no -m 'slow' tests/"
test = { ref = "test-fast" }
# run all — unit + integration (complete coverage, excludes slow/hanging tests)
all = [ {ref="lint"}, {ref="types"}, {ref="test-coverage"} ]
# run coverage — unit + integration (Dask cluster tests, ~30s extra)
coverage = [ {ref="lint"}, {ref="types"}, {ref="test-coverage"} ]
# run everything including truly slow tests (may take several minutes)
all-with-slow = [ {ref="lint"}, {ref="types"}, {ref="test-coverage"}, {ref="test-slow"} ]
all-strict = [ {ref="lint"}, {ref="types"}, {ref="test-fast-strict"}, {ref="test-slow"} ]

